--- a/app/templates/monSpazio.html
+++ b/app/templates/monSpazio.html
@@ -5,17 +5,14 @@
 {% block content %}
 {% set active = 'monSpazio' %}
 {% include "menu.html" %}
-<div id="toolbar">
-    <button id="refresh" class="btn btn-primary">Actualizar</button>
-</div>
 <div class="container-flex">
     <table id="table" 
     data-toggle="table" 
-    data-toolbar="#toolbar" 
 	data-search="true" 
     data-search-text="NOTOK"
+    data-show-refresh="true"
     data-auto-refresh="true"
-    data-auto-refresh-interval=300
+    data-buttons-class="primary"
     data-url="/api/v1.0/spazioStatus/">
         <thead>
             <tr>
@@ -39,12 +36,6 @@
 		var paginationParts = [];
         paginationParts.push("pageList");
 		$table.bootstrapTable('refreshOptions', { paginationParts: paginationParts });
-    });
-
-    $(function() {
-        $refresh.click(function () {
-            $table.bootstrapTable('refresh');
-        })
     });
 </script>
 {% endblock %}
